sylt-old/progs/tests/force/faulty_tuple.sy
start :: fn {
    a :: (1, "not", "an", "int")
    b: int = a[0]
    b
}

// error: #TypeMismatch(Type::Int, _)
